@@ -1,4 +1,7 @@
-
+2007-01-27 David Moore http://davemoore.org/
+	* SVN 362: Apply patch from Matt Robinson for the Mac OS capture
+	           routine to wait for thread creation with a semaphore.
+                   
 2007-01-24 Damien Douxchamps http://damien.douxchamps.net/
 	* SVN 361: Set some variables to zero to avoid valgrind errors.
 	           Thanks to Jon Schewe.
